@@ -1,4 +1,5 @@
 use Paws::JsonParamsService::Method1;
+use Paws::JsonParamsService::Method3;
 
 package Paws::JsonParamsService;
   use Moose;
@@ -20,4 +21,11 @@ package Paws::JsonParamsService;
     my $call_object = $self->new_with_coercions('Paws::JsonParamsService::Method1', @_);
     return $self->caller->do_call($self, $call_object);
   }
+
+  sub Method3 {
+    my $self = shift;
+    my $call_object = $self->new_with_coercions('Paws::JsonParamsService::Method3', @_);
+    return $self->caller->do_call($self, $call_object);
+  }
+ 
 1;
