@@ -19,4 +19,11 @@ package Paws::QueryParamsService;
     my $call_object = $self->new_with_coercions('Paws::JsonParamsService::Method2', @_);
     return $self->caller->do_call($self, $call_object);
   }
+
+  sub Method3 {
+    my $self = shift;
+    my $call_object = $self->new_with_coercions('Paws::JsonParamsService::Method3', @_);
+    return $self->caller->do_call($self, $call_object);
+  }
+ 
 1;
