@@ -11,7 +11,16 @@ package TestGivenResponse;
   sub do_call {
     my ($self, $service, $call_object) = @_;
 
-    return $self->caller_to_response($service, $call_object, 200, $call_object->response, {});
+    return $self->caller_to_response(
+      $service,
+      $call_object,
+      $call_object->status,
+      $call_object->response,
+      {
+        'x-amzn-requestid' => 'fake-uuid',
+        'x-amz-request-id' => 'fake-uuid',
+      }
+    );
   }
 
   sub caller_to_response {
@@ -19,7 +28,11 @@ package TestGivenResponse;
 
     my $res = $service->handle_response($call_object, $status, $content, $headers);
 
-    return $res;
+    if ($res->isa('Paws::Exception')){
+      $res->throw
+    } else {
+      return $res;
+    }
   }
 
   no Moose;
